summative.moria.Moria.scala.error
Erreur de compilation :
Moria:4: error: not found: value getDirectio
    while((getDirectio() == Direction.EST) && !estSurBiscuit() && !porteBiscuit()){
           ^Moria:4: error: not found: value Direction
    while((getDirectio() == Direction.EST) && !estSurBiscuit() && !porteBiscuit()){
                            ^Moria:8: error: not found: value getDirectio
    while((getDirectio() == Direction.OUEST) && !estSurBiscuit() && porteBiscuit()){
           ^Moria:8: error: not found: value Direction
    while((getDirectio() == Direction.OUEST) && !estSurBiscuit() && porteBiscuit()){
                            ^